# cgame

./: .gitignore  Untitled.ipynb  setup.cfg
aliens-go-home/: package-lock.json  package.json
aliens-go-home/src/: App.js  Game.js  index.css  index.js
aliens-go-home/src/actions/: index.js
aliens-go-home/src/components/: CannonBall.js  CannonBase.js  CannonPipe.js  Canvas.js  CurrentScore.js  FlyingObject.js  FlyingObjectBase.js  FlyingObjectTop.js  Ground.js  Heart.js  Sky.js  StartGame.js  Title.js
aliens-go-home/src/reducers/: checkCollisions.js  createFlyingObjects.js  index.js  moveCannonBalls.js  moveObjects.js  shoot.js  startGame.js
aliens-go-home/src/utils/: constants.js  formulas.js
cgame/: crosshair.py  game.py  hero.py  main.py  map.py  util.py
phaser1/: package-lock.json  package.json
phaser1/public/: test.html
phaser1/src/: App.js
phaser1/src/components/: Game.js  Image.js  Scene.js
phaser2/: babel.config.js  package-lock.json  package.json
phaser2/download-source/js/: game.js
phaser2/public/: index.html
phaser2/src/: App.js  game.js  index.css  index.js  scenes.js
phaser2/src/scenes/: BattleScene.js  BootScene.js  UIScene.js  WorldScene.js  index.js
phaser2/src/ui/: Menu.js  MenuItem.js  Message.js
phaser2/src/units/: Enemy.js  PlayerCharacter.js  Unit.js  index.js
phaser2/webpack/: prod.js
phaser2a/: package-lock.json  package.json
phaser2a/src/: index.js  scenes.js
phaser2a/webpack/: base.js  prod.js
