[metadata]
name = CGAME
version = 0.1
description = Copeland Game
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  pygame

[options.entry_points]
console_scripts =
    cgame = cgame.main:main
